oauth2-proxy-full.yaml
# WARNING: This file is auto-generated by 'make helm-create-manifest'! DO NOT EDIT MANUALLY!
---
# Source: kubernetes/charts/dex/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-example-dex
  labels:
    app.kubernetes.io/name: dex
    helm.sh/chart: dex-2.11.0
    app.kubernetes.io/instance: oauth2-proxy-example
    app.kubernetes.io/version: "2.23.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    targetPort: http
    port: 32000
  selector:
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: oauth2-proxy-example
---
# Source: kubernetes/charts/oauth2-proxy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy-sample
    chart: oauth2-proxy-3.1.0
    release: oauth2-proxy-example
    heritage: Helm
  name: oauth2-proxy-example-oauth2-proxy-sample
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: oauth2-proxy-sample
    release: oauth2-proxy-example
---
# Source: kubernetes/charts/dex/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy-example-dex
  labels:
    app.kubernetes.io/name: dex
    helm.sh/chart: dex-2.11.0
    app.kubernetes.io/instance: oauth2-proxy-example
    app.kubernetes.io/version: "2.23.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: dex
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: dex
      app.kubernetes.io/instance: oauth2-proxy-example
      app.kubernetes.io/component: dex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dex
        app.kubernetes.io/instance: oauth2-proxy-example
        app.kubernetes.io/component: dex
      annotations:
        checksum/config: 185f32cfabdf4f7467868dc301d4bd33e68951e12eddeb69f23ebc1d0f91ba28
    spec:
      serviceAccountName: oauth2-proxy-example-dex
      nodeSelector:
          {}
      containers:
      - name: main
        image: "ghcr.io/dexidp/dex:v2.30.0"
        imagePullPolicy: IfNotPresent
        command:
        - /usr/local/bin/dex
        - serve
        - /etc/dex/cfg/config.yaml
        resources:
          null
        ports:
        - name: http
          containerPort: 5556
          protocol: TCP
        # livenessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: http
        #   initialDelaySeconds: 1
        #   periodSeconds: 10
        #   timeoutSeconds: 1
        #   failureThreshold: 1
        # readinessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: http
        #   initialDelaySeconds: 1
        #   periodSeconds: 10
        #   timeoutSeconds: 1
        #   failureThreshold: 1
        volumeMounts:
        - mountPath: /etc/dex/cfg
          name: config
      volumes:
      - secret:
          defaultMode: 420
          items:
          - key: config.yaml
            path: config.yaml
          secretName: oauth2-proxy-example-dex
        name: config
---
# Source: kubernetes/charts/oauth2-proxy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy-sample
    chart: oauth2-proxy-3.1.0
    heritage: Helm
    release: oauth2-proxy-example
  name: oauth2-proxy-example-oauth2-proxy-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy-sample
      release: oauth2-proxy-example
  template:
    metadata:
      annotations:
        checksum/config: 5d8892a7b1d9eb03f9d59b787ce339b374fa2be51991e4e7533cb0a541984fac
        checksum/config-emails: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/secret: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/google-secret: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app: oauth2-proxy-sample
        release: "oauth2-proxy-example"
    spec:
      serviceAccountName: oauth2-proxy-example-oauth2-proxy-sample
      containers:
      - name: oauth2-proxy
        image: "quay.io/pusher/oauth2_proxy:v6.1.1"
        imagePullPolicy: IfNotPresent
        args:
          - --http-address=0.0.0.0:4180
          - --config=/etc/oauth2_proxy/oauth2_proxy.cfg
        ports:
          - containerPort: 4180
            name: http
            protocol: TCP
        # livenessProbe:
        #   httpGet:
        #     path: /ping
        #     port: http
        #     scheme: HTTP
        #   initialDelaySeconds: 0
        #   timeoutSeconds: 1
        # readinessProbe:
        #   httpGet:
        #     path: /ping
        #     port: http
        #     scheme: HTTP
        #   initialDelaySeconds: 0
        #   timeoutSeconds: 1
        #   successThreshold: 1
        #   periodSeconds: 10
        resources:
          {}
        volumeMounts:
        - mountPath: /etc/oauth2_proxy
          name: configmain
      volumes:
      - configMap:
          defaultMode: 420
          name: oauth2-proxy-example-oauth2-proxy-sample
        name: configmain
      tolerations:
        []
---
# Source: kubernetes/charts/dex/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - demo.msarimz.eu
      secretName: demo.msarimz.eu
  rules:
  - host: demo.msarimz.eu
    http:
      paths:
      - backend:
          service:
            name: oauth2-proxy-example-dex
            port:
              number: 32000
        path: /dex
        pathType: ImplementationSpecific
---
# Source: kubernetes/charts/oauth2-proxy/templates/ingress.yaml
# oauth2-proxy.localtest.me
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/server-snippet: |
      large_client_header_buffers 4 32k;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - demo.msarimz.eu
      secretName: proxy.msarimz.eu
  rules:
  - host: demo.msarimz.eu
    http:
      paths:
      - path: /oauth2/callback
        backend:
          service:
            name: oauth2-proxy-example-oauth2-proxy-sample
            port:
              number: 80
        pathType: ImplementationSpecific
      - path: /oauth2/start
        backend:
          service:
            name: oauth2-proxy-example-oauth2-proxy-sample
            port:
              number: 80
        pathType: ImplementationSpecific
---
